--- a/application.yml
+++ b/application.yml
@@ -3,13 +3,13 @@
 		active:
 		- test
 ---
-spring
+spring:
 	profiles: dev #开发环境
 	application:	
 		name: microservicecloud-config-dev
 ---
 
-spring
+spring:
 	profiles: test#开发环境
 	application:	
 		name: microservicecloud-config-test
