--- a/microservicecloud-eureka-config-client.yml
+++ b/microservicecloud-eureka-config-client.yml
@@ -1,4 +1,4 @@
-spring:
+﻿spring:
  profile:
   active:
    - dev
@@ -7,6 +7,7 @@ server:
   port: 7001
 spring:
   profiles: dev
+  name: microservicecloud-eureka-config-client
 
 eureka:
   instance:
@@ -22,6 +23,7 @@ server:
   port: 7002
 spring:
   profiles: test
+  name: microservicecloud-eureka-config-client
 
 eureka:
   instance:
