--- a/microservicecloud-eureka-config-client.yml
+++ b/microservicecloud-eureka-config-client.yml
@@ -7,7 +7,8 @@ server:
   port: 7001
 spring:
   profiles: dev
-  name: microservicecloud-eureka-config-client
+  application:
+    name: microservicecloud-eureka-config-client #服务名称必须与bootstrap一致
 
 eureka:
   instance:
@@ -23,7 +24,8 @@ server:
   port: 7002
 spring:
   profiles: test
-  name: microservicecloud-eureka-config-client
+  application:
+    name: microservicecloud-eureka-config-client #服务名称必须与bootstrap一致
 
 eureka:
   instance:
