--- a/microservicecloud-eureka-config-client.yml
+++ b/microservicecloud-eureka-config-client.yml
@@ -8,14 +8,14 @@ server:
 spring:
   profiles: dev
   application:
-    name: microservicecloud-eureka-config-client #服务名称必须与bootstrap一致
+    name: microservicecloud-eureka-config-client 
 
 eureka:
   instance:
-    hostname: eureka7001.com #euraka服务端的实例名称
+    hostname: eureka7001.com 
   client:
-    register-with-eureka: false #false表示不想注册中心注册自己
-    fetch-registry: false # false表示自己端就是注册中心，我的职责就是维护服务实例，并不炫耀去检索服务
+    register-with-eureka: false 
+    fetch-registry: false 
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/
 
@@ -25,14 +25,14 @@ server:
 spring:
   profiles: test
   application:
-    name: microservicecloud-eureka-config-client #服务名称必须与bootstrap一致
+    name: microservicecloud-eureka-config-client 
 
 eureka:
   instance:
-    hostname: eureka7002.com #euraka服务端的实例名称
+    hostname: eureka7002.com 
   client:
-    register-with-eureka: false #false表示不想注册中心注册自己
-    fetch-registry: false # false表示自己端就是注册中心，我的职责就是维护服务实例，并不炫耀去检索服务
+    register-with-eureka: false 
+    fetch-registry: false 
     service-url:
       defaultZone: http://eureka7002.com:7002/eureka/
 
